fixed word wrap so that momento input doesnt go outside of <div> when its long

--- a/client/style.css
+++ b/client/style.css
@@ -205,6 +205,11 @@
 	overflow: scroll;
 }
 
+.momentoInput {
+
+	overflow: hidden;
+}
+
 /*#modalCloseButn {
 	position: absolute;
 	left: 85%;
